[metadata]
name = ecstest
summary = Functional test suite for EMC ECS deployments
description-file =
    README.md
author = EMC
author-email = autobots@emc.com
classifier =
    Environment :: EMC Rubicon
    Intended Audience :: Information Technology
    Intended Audience :: Software Test Engineers
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3

[files]
packages =
    ecstest

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
